--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish Website
 on:
   push:
     branches: # triggers on any push to master
-    - Tailwind
+    - main
 
 jobs:
   build-deploy:
@@ -20,8 +20,6 @@ jobs:
       run: npm run test --if-present
     - name: Build
       run: npm run build --if-present
-    - name: Create CNAME
-      run: echo "tcukawi.tech" > "dist/CNAME"
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
