--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html"
+    "build": "parcel build --public-url \"/\" src/*.html"
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
