--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build --public-url /templateTailwind/ src/*.html",
+    "build": "parcel build src/*.html",
     "buildNotRoot": "parcel build --public-url 'templateTailwind' src/*.html"
   },
   "dependencies": {
